# xilem

./: Cargo.toml
masonry/: Cargo.toml
masonry/examples/: calc_masonry.rs  grid_masonry.rs  hello_masonry.rs
masonry/src/: action.rs  contexts.rs  debug_logger.rs  event.rs  event_loop_runner.rs  render_root.rs
masonry/src/app/: render_root.rs
masonry/src/passes/: accessibility.rs  event.rs  update.rs
masonry/src/testing/: harness.rs  mod.rs
masonry/src/widget/: button.rs  checkbox.rs  dark_light_switch.rs  grid.rs  label.rs  light_dark_switch.rs  mod.rs  progress_bar.rs  prose.rs  sized_box.rs  split.rs  textbox.rs  themer.rs  variable_label.rs  widget.rs  widget_state.rs
masonry/src/widget/tests/: status_change.rs
masonry/src/widgets/: button.rs  button9.rs  checkbox.rs  flex.rs  label.rs  text_area.rs
xilem/: Cargo.toml
xilem/examples/: calc.rs  external_event_loop.rs  gallery_button_xilem_view.rs  mason.rs  memoization.rs  state_machine.rs  variable_clock.rs  widgets.rs
xilem/src/: lib.rs
xilem/src/view/: button.rs  checkbox.rs  dark_light_switch.rs  flex.rs  grid.rs  label.rs  light_dark_switch.rs  mod.rs  prose.rs  sized_box.rs  zstack.rs
xilem_colors/: Cargo.toml
xilem_colors/src/: apca.rs  color_space.rs  lib.rs  scales.rs  tokens.rs  utils.rs
xilem_core/: Cargo.toml
