[package]
name = "xilem_colors"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
xilem_core.workspace = true
interpoli.workspace = true
palette = "0.7.6"
peniko = "0.1.1"

[lints]
workspace = true
